<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/">
    <item android:id="@+id/menu_parent"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/tutorial"
                android:title="Tutorial"
                app:showAsAction="never"/>
            <item android:id="@+id/easy"
                android:title="@string/easy"
                app:showAsAction="never"/>
            <item android:id="@+id/normal"
                android:title="@string/medium"
                app:showAsAction="never"/>
            <item android:id="@+id/hard"
                android:title="@string/hard"
                app:showAsAction="never"/>
            <item android:id="@+id/random"
                android:title="@string/random" />
            <item android:id="@+id/action_reset_data"
                android:title="@string/action_reset_data"
                android:orderInCategory="100"/>
        </menu>
    </item>
    <!--<item android:id="@+id/reset"-->
        <!--android:title="Reset" />-->
    <!--<item android:id="@+id/memo_good"-->
        <!--android:title="Good" />-->
    <!--<item android:id="@+id/log_good"-->
        <!--android:title="Log good" />-->
    <!--<item android:id="@+id/good_reset"-->
        <!--android:title="Good Reset"/>-->
</menu>