<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/header"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:paddingTop="40dp">
        <TextView android:id="@+id/vs_text"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/vs"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/move_blank"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"/>

        <TextView android:id="@+id/text1"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/player1"
            android:textColor="@color/hint"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_toLeftOf="@+id/vs_text"
            android:layout_toStartOf="@+id/vs_text"/>

        <ImageView android:id="@+id/icon1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/move_blank"
            android:layout_toLeftOf="@+id/text1"
            android:layout_toStartOf="@+id/text1"
            android:padding="12dp"
            android:contentDescription="@string/icon"/>

        <TextView android:id="@+id/text2"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/player2"
            android:textColor="@color/hint"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_toRightOf="@+id/vs_text"
            android:layout_toEndOf="@+id/vs_text" />
        <ImageView android:id="@+id/icon2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/move_blank"
            android:layout_toRightOf="@+id/text2"
            android:layout_toEndOf="@+id/text2"
            android:padding="12dp"
            android:contentDescription="@string/icon"/>

        <TextView android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_first"
            android:textSize="16sp"
            android:textColor="@color/hint"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/vs_text"
            android:layout_marginTop="48dp"/>

        <ImageView android:id="@+id/hint_indicator"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/hint_indicator_down"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/hint_text"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/button_parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="#263238">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button android:id="@+id/button1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/easy"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/e"
                android:padding="20dp"/>
            <Button android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/medium"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/boy"
                android:padding="20dp"/>
            <Button android:id="@+id/button3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/hard"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/dokuro"
                android:padding="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button android:id="@+id/button4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/expert"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/threat"
                android:padding="20dp"/>
            <Button android:id="@+id/button5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pro"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/santa"
                android:padding="20dp"/>
            <Button android:id="@+id/button6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/master"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/crown"
                android:padding="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button android:id="@+id/button7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"/>
            <Button android:id="@+id/button8"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/you"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/you"
                android:padding="20dp"/>
            <Button android:id="@+id/button9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="cancel"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@drawable/ic_cancel"
                android:padding="20dp"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C000"/>
    <TextView android:id="@+id/tutorial_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/vs"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/move_cyan"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />
    <TextView android:id="@+id/tutorial_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/tutorial_arrow"
        android:layout_marginTop="10dp"/>

    <ImageView android:id="@+id/tutorial_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/hint_indicator_up"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tutorial_btn"
        android:contentDescription="@string/icon"/>

</RelativeLayout>
