<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:paddingTop="40dp">

    <TextView android:id="@+id/vs_text"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/vs"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/move_test3"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"/>


    <TextView android:id="@+id/text1"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/player1"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_toLeftOf="@+id/vs_text"
        android:layout_toStartOf="@+id/vs_text"/>

    <ImageView android:id="@+id/icon1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/move_test2"
        android:layout_toLeftOf="@+id/text1"
        android:layout_toStartOf="@+id/text1"
        android:padding="12dp"
        android:contentDescription="@string/icon"/>

    <TextView android:id="@+id/text2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/player2"
        android:textColor="#5FFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_toRightOf="@+id/vs_text"
        android:layout_toEndOf="@+id/vs_text" />
    <ImageView android:id="@+id/icon2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/move_test1"
        android:layout_toRightOf="@+id/text2"
        android:layout_toEndOf="@+id/text2"
        android:padding="12dp"
        android:contentDescription="@string/icon"/>

    <include layout="@layout/board_trial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/vs_text"/>

</RelativeLayout>